# modelscope

./: Cargo.toml  README.md  README_zh.md
.github/workflows/: publish.yml
src/: lib.rs  main.rs
