[package]
name = "modelscope"
version = "0.1.0"
edition = "2024"
description = "A command-line interface tool for downloading models from Modelscope, which can also be used as a library"
license = "Apache-2.0"
repository = "https://github.com/xgpxg/modelscope"
documentation = "https://docs.rs/modelscope"

[dependencies]
serde = "1.0"
anyhow = "1.0"
tokio = { version = "1.47", features = ["rt", "rt-multi-thread", "macros"] }
reqwest = { version = "0.12.23", features = ["json", "stream"] }
clap = { version = "4.5.47", features = ["derive"] }
indicatif = "0.18.0"
futures-util = "0.3.31"
openssl = { version = "0.10.73", features = ["vendored"] }